# KanyeChatBot

./: .env  README.md  main.py  pyproject.toml  test.ipynb  test2_gradio.ipynb
